# rues

./: README.md  pyproject.toml  read_the_docs_requirements.txt  requirements.txt  rues_example.py  setup.py
docs/: biblio.bib  conf.py  index.rst
docs/tutorials/: complex_example.rst  simple_example.rst
docs/user_guide/: GA_intro.rst  interface.rst  intro.rst
rails/: Individual.py  Population.py  __init__.py
rails/crossover_algorithms/: blend_crossover.py  k_point_crossover.py
rails/mutation_algorithms/: uniform_mutator.py
rails/reinsertion_algorithms/: age_model.py  fittest_model.py
rails/selection_algorithms/: __init__.py  create_random_pairs.py  roulette_wheel.py  tournament.py
rails/utils/: sort_population.py
rues/: Individual.py  Population.py  __init__.py  genetic_algo.py  index.rst  model.py
rues/crossover_algorithms/: blend_crossover.py  k_point_crossover.py
rues/reinsertion_algorithms/: __init__.py  age_model.py  fittest_model.py
rues/selection_algorithms/: roulette_wheel.py  stochastic_US.py  tournament.py
rues/utils/multiprocessing/: handler.py  worker.py
src/: Individual.py  Population.py  genetic_algo.py
src/crossover_algorithms/: __init__.py  blend_crossover.py  k_point_crossover.py
src/mutation_algorithms/: __init__.py  uniform_mutator.py
src/reinsertion_algorithms/: fittest_model.py
src/selection_algorithms/: __init__.py  create_random_pairs.py  roulette_wheel.py  stochastic_US.py  tournament.py
src/utils/: __init__.py  sort_population.py
src/utils/multiprocessing/: handler.py  worker.py
