[tool.poetry]
name = "rues"
version = "0.1.0"
description = ""
authors = ["Kamuish <andremiguel952@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
