[tool.poetry]
name = "rues"
version = "0.1.1.3"
description = "rues - genetic algorithms in python"
authors = ["Kamuish <andremiguel952@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
scipy = "^1.4.1"
corner = "^2.0.1"
sphinx = "^3.1.0"
sphinxcontrib-bibtex = "^1.0.0"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
